[package]
name = "bevy_console"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["ui_api", "bevy_text", "ui_picking"] }
bevy_egui = "0.39"
crossbeam = "0.8"
chrono = "0.4"

tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }


[[example]]
name = "basic"
path = "examples/basic.rs"
